--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,30 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.5.1</td>
+      <td class="font-size-16">5-01-25</td>
+      <td>
+        <ul class="font-size-16">
+          <li>
+            Enhanced polyfills for improved compatibility with older browsers
+            (e.g., Safari 14.1):
+            <ul class="font-size-15">
+              <li>Added support for nested CSS</li>
+              <li>
+                Implemented a polyfill for media query range notation (<, <=, >,
+                >=)
+              </li>
+              <li>Included a polyfill for the aspect-ratio property.</li>
+            </ul>
+          </li>
+          <li>
+            Fixed page navigation anchor tags to ensure proper scrolling
+            behavior
+          </li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.5.0</td>
       <td class="font-size-16">4-25-25</td>
       <td>
