updated cdn page and removed main-stylesheet ID

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -64,7 +64,7 @@ permalink: "visual-design/color.html"
 
     <pre>
 <code><!-- State Web Template core css file -->
-<link rel="stylesheet" href="/state-template/css/cagov.core.css" id="main-stylesheet"  />
+<link rel="stylesheet" href="/state-template/css/cagov.core.css"  />
 
 <!-- Include link to a color theme stylesheet of your choice -->
 <link rel="stylesheet" href="/state-template/css/colortheme-delta.css" /></code></pre>
