--- a/pages/sample/get-started-npm.html
+++ b/pages/sample/get-started-npm.html
@@ -88,7 +88,7 @@ import "@cagovweb/state-template/dist/js/cagov.core.js";
     <p class="m-t-md">
       In your layout files you can reference the files in the lib folder:
     </p>
-    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent5">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent5">href=</span><span class="text-accent7">"~/lib/state-template/dist/css/cagov.core.min.css" </span><span class="text-accent5">id=</span><span class="text-accent7">"main-stylesheet"</span><span class="text-accent-p2">&gt;</span>
+    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent5">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent5">href=</span><span class="text-accent7">"~/lib/state-template/dist/css/cagov.core.min.css" </span><span class="text-accent-p2">&gt;</span>
 <span class="text-accent-p2">&lt;link</span> <span class="text-accent5">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent5">href=</span><span class="text-accent7">"~/lib/state-template/dist/css/colortheme-oceanside.min.css"</span><span class="text-accent-p2">&gt;</span>
 <span class="text-accent-p2">&lt;script</span> <span class="text-accent5">src=</span><span class="text-accent7">"~/lib/state-template/dist/js/cagov.core.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 </pre>
@@ -111,7 +111,7 @@ import "@cagovweb/state-template/dist/js/cagov.core.js";
     <pre><span class="text-accent-p2">&lt;head&gt;</span>
   ...
   <span class="text-muted">&lt;!-- State Web Template core files --&gt;</span>
-  <span class="text-accent-p2">&lt;link</span> <span class="text-accent5">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent5">href=</span><span class="text-accent7">"/state-template/css/cagov.core.min.css"</span> <span class="text-accent5">id=</span><span class="text-accent7">"main-stylesheet"</span><span class="text-accent-p2">&gt;</span>
+  <span class="text-accent-p2">&lt;link</span> <span class="text-accent5">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent5">href=</span><span class="text-accent7">"/state-template/css/cagov.core.min.css"</span><span class="text-accent-p2">&gt;</span>
   <span class="text-accent-p2">&lt;link</span> <span class="text-accent5">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent5">href=</span><span class="text-accent7">"/state-template/css/colortheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span>
 
   <span class="text-accent-p2">&lt;script</span> <span class="text-accent5">src=</span><span class="text-accent7">"/state-template/js/cagov.core.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
