cert date update

--- a/pages/website-accessibility-certification.html
+++ b/pages/website-accessibility-certification.html
@@ -8,25 +8,23 @@ permalink: "website-accessibility-certification.html"
   <div class="col-md-10 mx-auto p-b-lg">
     <h1>Website Accessibility Certification</h1>
 
-    <h2>2023 Certification</h2>
+    <h2>2025 Certification</h2>
 
-    <p>
-      <div class="m-b-lg">
-        <h3 class="m-b-0">Agency:</h3>
-        California Department of Technology
-      </div>
-      <div class="m-b-lg">
-        <h3 class="m-b-0">Certification date:</h3>
-        June 15, 2023
-      </div>
-      <div class="m-b-lg">
-        <h3 class="m-b-0">Contact:</h3>
-        <a href="mailto:example@state.ca.gov"> ServiceDesk@state.ca.gov </a>
-      </div>
-    </p>
+    <div class="m-b-lg">
+      <h3 class="m-b-0">Agency:</h3>
+      California Department of Technology
+    </div>
+    <div class="m-b-lg">
+      <h3 class="m-b-0">Certification date:</h3>
+      June 9, 2025
+    </div>
+    <div class="m-b-lg">
+      <h3 class="m-b-0">Contact:</h3>
+      <a href="mailto:example@state.ca.gov"> ServiceDesk@state.ca.gov </a>
+    </div>
 
     <p class="lh-lg">
-      The undersigned certify that, as of <strong>June 5, 2023</strong> the
+      The undersigned certify that, as of <strong>June 9, 2025</strong> the
       website of the <strong>California Department of Technology</strong> is
       designed, developed, and maintained to be accessible. This denotes
       compliance with the following:
@@ -63,16 +61,14 @@ permalink: "website-accessibility-certification.html"
         <strong>Quentin Wright</strong>
         <p>
           Chief Information Officer<br />
-          (Signature on file)
-          June 15, 2023
+          (Signature on file) June 10, 2025
         </p>
       </div>
       <div class="lh-lg">
         <strong>Liana Bailey-Crimmins</strong>
         <p>
           Director<br />
-          (Signature on file)
-          June 15, 2023
+          (Signature on file) June 10, 2025
         </p>
       </div>
     </div>
