Site name update

--- a/pages/website-accessibility-certification.html
+++ b/pages/website-accessibility-certification.html
@@ -25,9 +25,9 @@ permalink: "website-accessibility-certification.html"
 
     <p class="lh-lg">
       The undersigned certify that, as of <strong>June 10, 2025</strong> the
-      website of the <strong>California Department of Technology</strong> is
-      designed, developed, and maintained to be accessible. This denotes
-      compliance with the following:
+      website of the <strong>California State Web Template</strong> is designed,
+      developed, and maintained to be accessible. This denotes compliance with
+      the following:
     </p>
 
     <ul class="m-b-lg">
