added comment and will delete soon

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,8 @@ layout: landing.njk
 customcss: /css/homepage.css
 ---
 
+<!--Need to add a content here eventually-->
+
 {% include "../src/_includes/modules/header-primary-banner.html" %} {% include
 "../src/_includes/modules/section-icon-blocks.html" %} {% include
 "../src/_includes/modules/three-cards.html" %} {% include
