--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@ customcss: /css/homepage.css
 ---
 
 <!--Need to add a content here eventually-->
+<!--Need to add a content here eventually fix typo-->
 
 {% include "../src/_includes/modules/header-primary-banner.html" %} {% include
 "../src/_includes/modules/section-icon-blocks.html" %} {% include
