Added featured search component page

--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -164,277 +164,14 @@ permalink: "structure/search.html"
       </section>
     </div>
 
-    <h2>Inactive search</h2>
-    <p>
-      This search bar is hidden (inactive) and becomes active when people select
-      the search menu icon. This search is used on mobile and for sites that use
-      <a href="/structure/navigation-icons.html">icon menu</a>
-      (which includes the search icon).
-    </p>
-
-    <!--start tabs2-->
-    <div class="tabs responsive">
-      <ul class="nav-tabs">
-        <li>
-          <a href="#section4">Example</a>
-        </li>
-        <li>
-          <a href="#section5">Source code</a>
-        </li>
-        <li>
-          <a href="#section6">Implementation notes</a>
-        </li>
-      </ul>
-
-      <section id="section4" class="tab-pane">
-        <div class="card-header" id="heading-example2">
-          <h4 class="my-0 w-100">
-            <a
-              data-bs-toggle="collapse"
-              href="#collapse-example2"
-              aria-expanded="true"
-              aria-controls="collapse-example2"
-              title="Example inactive search tab header">
-              Example
-            </a>
-          </h4>
-        </div>
-        <div
-          id="collapse-example2"
-          class="collapse show p-0 m-0 brd-0"
-          role="tabpanel"
-          aria-labelledby="heading-example2">
-          <div class="p-a-sm">
-            <h3 class="h4 m-t-0">Desktop</h3>
-            <img
-              src="/images/components/structure-search-inactive.jpg"
-              class="img-fluid"
-              alt="Inactive search component screenshot" />
-
-            <a
-              href="/structure/search-inactive.html"
-              class="btn btn-outline-primary m-t-md">
-              Live example
-              <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <section id="section5" class="tab-pane">
-        <div class="card-header" id="heading-html2">
-          <h4 class="my-0 w-100">
-            <a
-              class="collapsed"
-              data-bs-toggle="collapse"
-              href="#collapse-html2"
-              aria-expanded="false"
-              aria-controls="collapse-html2"
-              title="Inactive search HTML source code tab header">
-              HTML Source code
-            </a>
-          </h4>
-        </div>
-        <div
-          id="collapse-html2"
-          class="collapse p-0 m-0 brd-0"
-          role="tabpanel"
-          aria-labelledby="heading-html2">
-          <div class="p-a-sm">
-            <h3 class="h4 m-t-0">HTML</h3>
-            <pre><code>{% include "../../src/_includes/search.njk" %}</code>
-      </pre>
-          </div>
-        </div>
-      </section>
-
-      <section id="section6" class="tab-pane">
-        <div class="card-header" id="heading-include2">
-          <h4 class="my-0 w-100">
-            <a
-              class="collapsed"
-              data-bs-toggle="collapse"
-              href="#collapse-include2"
-              aria-expanded="false"
-              aria-controls="collapse-include2"
-              title="Inactive search implementation notes tab header">
-              Implementation notes
-            </a>
-          </h4>
-        </div>
-        <div
-          id="collapse-include2"
-          class="collapse p-0 m-0 brd-0"
-          role="tabpanel"
-          aria-labelledby="heading-include2">
-          <div class="p-a-sm">
-            <h3 class="h4">Using inactive search include in site header</h3>
-            <p>
-              Following code (that has both the search and the site navigation
-              includes) needs to be placed right before closing
-              <code>&lt;/header&gt;</code>
-              tag
-            </p>
-            <pre><code><div class="navigation-search">
-  <!--Site navigation component code goes here-->
- <div id="head-search" class="search-container">
-  <!--Search component code goes here-->
- </div>
-</div></code></pre>
-
-            <p class="m-t">
-              <span class="text-highlight-primary">Note:</span>
-              Path to the include will be relative to the directory of your
-              page.
-            </p>
-          </div>
-        </div>
-      </section>
-    </div>
-    <!--end tabs2-->
-
     <h2>Featured search</h2>
+
     <p>
-      This search is directly under the main menu in a prominent container. It's
-      size and location means the website is intentionally showcasing search as
-      a top task.
+      The featured search is a standalone component, placed near the top of the
+      page to emphasize search functionality. For more information, see the
+      <a href="/components/featured-search.html">Featured search</a> component
+      page.
     </p>
-
-    <!--start tabs3-->
-    <div class="tabs responsive">
-      <ul class="nav-tabs">
-        <li>
-          <a href="#section7">Example</a>
-        </li>
-        <li>
-          <a href="#section8">Source code</a>
-        </li>
-        <li>
-          <a href="#section9">Implementation notes</a>
-        </li>
-      </ul>
-
-      <section id="section7" class="tab-pane">
-        <div class="card-header" id="heading-example3">
-          <h4 class="my-0 w-100">
-            <a
-              data-bs-toggle="collapse"
-              href="#collapse-example3"
-              aria-expanded="true"
-              aria-controls="collapse-example3"
-              title="Example featured search tab header">
-              Example
-            </a>
-          </h4>
-        </div>
-        <div
-          id="collapse-example3"
-          class="collapse show p-0 m-0 brd-0"
-          role="tabpanel"
-          aria-labelledby="heading-example3">
-          <div class="p-a-sm">
-            <h3 class="h4 m-t-0">Desktop</h3>
-            <img
-              src="/images/components/structure-search-featured.jpg"
-              class="img-fluid"
-              alt="Featured search" />
-            <a
-              href="/structure/featured-search.html"
-              class="btn btn-outline-primary m-t-md">
-              Live example
-              <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span>
-              <span class="sr-only">of the featured search</span>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <section id="section8" class="tab-pane">
-        <div class="card-header" id="heading-html3">
-          <h4 class="my-0 w-100">
-            <a
-              class="collapsed"
-              data-bs-toggle="collapse"
-              href="#collapse-html3"
-              aria-expanded="false"
-              aria-controls="collapse-html3"
-              title="Featured search HTML source code tab header">
-              HTML Source code
-            </a>
-          </h4>
-        </div>
-        <div
-          id="collapse-html3"
-          class="collapse p-0 m-0 brd-0"
-          role="tabpanel"
-          aria-labelledby="heading-html3">
-          <div class="p-a-sm">
-            <h3 class="h4 m-t-0">HTML</h3>
-            <pre><code>{% include "../../src/_includes/search.njk" %}</code>
-      </pre>
-          </div>
-        </div>
-      </section>
-
-      <section id="section9" class="tab-pane">
-        <div class="card-header" id="heading-include3">
-          <h4 class="my-0 w-100">
-            <a
-              class="collapsed"
-              data-bs-toggle="collapse"
-              href="#collapse-include3"
-              aria-expanded="false"
-              aria-controls="collapse-include3"
-              title="Featured search implementation notes tab header">
-              Implementation notes
-            </a>
-          </h4>
-        </div>
-        <div
-          id="collapse-include3"
-          class="collapse p-0 m-0 brd-0"
-          role="tabpanel"
-          aria-labelledby="heading-include3">
-          <div class="p-a-sm">
-            <h3 class="h4 m-t-0">Implementation notes</h3>
-
-            <p>
-              Featured search can be only used with
-              <code>navicons.njk</code>
-              or
-              <code>navicons-landing.njk</code>
-              layouts, since
-              <code>page.njk</code>
-              and
-              <code>landing.njk</code>
-              page layouts already use active search in their page header by
-              default. The
-              <code>.featured-search</code>
-              class needs to be added to the
-              <code>#head-search</code>
-              div in the header of your page. To do this, add the
-              <code>search: Featured</code>
-              parameter to your page front matter data.
-            </p>
-
-            <h3 class="h4">Using search include in site header</h3>
-            <p class="m-b">
-              Following code (that has both the search and the site navigation
-              includes) needs to be placed right before closing
-              <code>&lt;/header&gt;</code>
-              tag
-            </p>
-            <pre><code><div class="navigation-search">
-  <!--Site navigation component code goes here-->
- <div id="head-search" class="search-container featured-search">
-  <!--Search component code goes here-->
- </div>
-</div></code></pre>
-          </div>
-        </div>
-      </section>
-    </div>
-    <!--end tabs-->
 
     <h2>Usage</h2>
     <h3>When and how to use it</h3>
