--- a/pages/sample/featured-search.html
+++ b/pages/sample/featured-search.html
@@ -1,5 +1,5 @@
 ﻿---
-title: Breadcrumb
+title: Featured search
 landing: Components
 layout: components.njk
 permalink: "components/featured-search.html"
