Added featured search to the component page

--- a/pages/components.html
+++ b/pages/components.html
@@ -167,6 +167,26 @@ permalink: "components.html"
   </div>
   <div class="col-md-4 m-t-md">
     <a
+      href="/components/featured-search.html"
+      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+      title="Featured search component example">
+      <div class="p-a-md d-flex align-content-center">
+        <img
+          src="/images/components/icon-searchbox.jpg"
+          alt="Featured search component"
+          class="img-fluid" />
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Featured search</h3>
+        <p class="font-size-16 color-black">
+          Highlights search as the primary task, typically placed prominently on
+          the homepage.
+        </p>
+      </div>
+    </a>
+  </div>
+  <div class="col-md-4 m-t-md">
+    <a
       href="/components/form-elements.html"
       class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
       title="Form styles example">
