Added deprication alert to parallax component #1609

--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -9,6 +9,14 @@ permalink: "components/parallax.html"
 
 <nav class="page-navigation"></nav>
 
+<div class="alert alert-danger rounded-0" role="alert">
+  <span
+    class="alert-icon ca-gov-icon-warning-triangle text-accent7"
+    aria-hidden="true"></span>
+  This parallax component is not supported on iOS and is scheduled for
+  deprecation in January 2026.
+</div>
+
 <p>
   The parallax is a visual design component. When scrolling, it allows
   background and foreground elements to move at different speeds, creating a 3D
