--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,7 +32,7 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
-      <td class="text-bold font-size-16">6.x</td>
+      <td class="text-bold font-size-16">6.5.2</td>
       <td class="font-size-16">1-01-26</td>
       <td>
         <ul class="font-size-16">
