Updated site to v6.5.3

--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -52,7 +52,7 @@ permalink: "cdn.html"
 
     <h2>Examples</h2>
     <h3>Using core CSS file</h3>
-    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.1/css/cagov.core.min.css" <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-f2k3x0x/l4G+mg5fxnV+Q37/8RoMOoMOWphHJ4vWn6g="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span></span><span class="text-accent-p2">&gt;</span></pre>
+    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/cagov.core.min.css" <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-5HWi2hPBRTXjYrXNOmTU09rvLSQZUSsw2OwwB2gwV7M="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span></span><span class="text-accent-p2">&gt;</span></pre>
 
     <h4>Optional color theme CSS</h4>
     <p>
@@ -62,10 +62,10 @@ permalink: "cdn.html"
       the <a href="/visual-design/color.html">Colors</a> page.
     </p>
 
-    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.1/css/colortheme-oceanside.min.css"</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-qQZPn1EYL0e5S3aEqiYN1bHdh5BVZIZPb7kRe5ccbp8="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
+    <pre><span class="text-accent-p2">&lt;link</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-oceanside.min.css"</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span>  <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-qQZPn1EYL0e5S3aEqiYN1bHdh5BVZIZPb7kRe5ccbp8="</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span><br /></pre>
 
     <h3>Using JS files</h3>
-    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.1/js/cagov.core.min.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-MRHAOqwc4jjHeTGa/9mcdxAv3aVG+lQ7eJ9DPa+Gr/k="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
+    <pre><span class="text-accent-p2">&lt;script</span> <span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/js/cagov.core.min.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-1OMkx0vAH91MnuNDFcmcM6OyFt8rvfQtu+mFRWludK4="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
 
     <h3>Crossorigin anonymous</h3>
     <p>
@@ -101,10 +101,10 @@ permalink: "cdn.html"
      <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&amp;display=block"</span><span class="text-accent-p2">&gt;</span>
 
      <span class="text-muted">&lt;!-- State Template CDN CSS --&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.1/css/cagov.core.min.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-f2k3x0x/l4G+mg5fxnV+Q37/8RoMOoMOWphHJ4vWn6g="</span><span class="text-accent-p2">&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.1/css/colortheme-oceanside.min.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-qQZPn1EYL0e5S3aEqiYN1bHdh5BVZIZPb7kRe5ccbp8="</span>  <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/cagov.core.min.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-5HWi2hPBRTXjYrXNOmTU09rvLSQZUSsw2OwwB2gwV7M="</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-accent3">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent3">href=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-oceanside.min.css"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-qQZPn1EYL0e5S3aEqiYN1bHdh5BVZIZPb7kRe5ccbp8="</span>  <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;</span>
      <span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
-     <span class="text-accent-p2">&lt;script </span><span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.1/js/cagov.core.min.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-MRHAOqwc4jjHeTGa/9mcdxAv3aVG+lQ7eJ9DPa+Gr/k="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
+     <span class="text-accent-p2">&lt;script </span><span class="text-accent3">src=</span><span class="text-accent7">"https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/js/cagov.core.min.js"</span> <span class="text-accent3">integrity=</span><span class="text-accent7">"sha256-1OMkx0vAH91MnuNDFcmcM6OyFt8rvfQtu+mFRWludK4="</span> <span class="text-accent3">defer</span> <span class="text-accent3">crossorigin=</span><span class="text-accent7">"anonymous"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 
     <span class="text-accent-p2">&lt;/head&gt;</span>
    <span class="text-accent-p2">&lt;body&gt;</span>
@@ -143,6 +143,46 @@ permalink: "cdn.html"
     </p>
     <h3>Web State Template v6 (production)</h3>
     <ol data-aria-accordion data-multi data-transition data-default="none">
+      <li>
+        <h4 data-aria-accordion-heading>Version 6.5.3</h4>
+        <div data-aria-accordion-panel>
+          <p>CSS</p>
+          <pre>
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/cagov.core.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/cagov.core.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/cagov.core.flat.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-delta.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-delta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-eureka.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-eureka.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-mono.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-mono.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-oceanside.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-oceanside.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-orangecounty.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-orangecounty.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-pasorobles.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-pasorobles.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-sacramento.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-sacramento.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-santabarbara.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-santabarbara.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-santacruz.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-santacruz.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-sierra.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-sierra.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-shasta.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-shasta.min.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-trinity.css" rel="stylesheet" crossorigin="anonymous"&gt;
+&lt;link href="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/css/colortheme-trinity.min.css" rel="stylesheet" crossorigin="anonymous"&gt;</pre
+          >
+          <p>JS</p>
+          <pre>
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/js/cagov.core.js" defer crossorigin="anonymous&gt;&lt;/script&gt;
+&lt;script src="https://cdn.cdt.ca.gov/cdt/statetemplate/6.5.3/js/cagov.core.min.js" defer crossorigin="anonymous"&gt;&lt;/script&gt;</pre
+          >
+        </div>
+      </li>
       <li>
         <h4 data-aria-accordion-heading>Version 6.5.1</h4>
         <div data-aria-accordion-panel>
