updated State template to v6.5.4

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,8 +32,8 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
-      <td class="text-bold font-size-16">6.5.2</td>
-      <td class="font-size-16">1-01-26</td>
+      <td class="text-bold font-size-16">6.5.4</td>
+      <td class="font-size-16">1-15-26</td>
       <td>
         <ul class="font-size-16">
           <li>Fixed Safari 16.5 support issues.</li>
@@ -50,6 +50,7 @@ permalink: "template-updates.html"
           </li>
           <li>Updated subnav carrot for improved accessibility.</li>
           <li>Fixed issue with multiple alert banners and sticky header.</li>
+          <li>Fixed side navigation hover color contrast issue in mobile</li>
         </ul>
       </td>
     </tr>
