--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -163,6 +163,9 @@ permalink: "sitemap.html"
             <a href="/components/countdown-timer.html">Countdown timer</a>
           </li>
           <li class="m-t-sm">
+            <a href="/components/featured-search.html">Featured search</a>
+          </li>
+          <li class="m-t-sm">
             <a href="/components/form-elements.html">Form elements</a>
           </li>
           <li class="m-t-sm">
@@ -181,9 +184,6 @@ permalink: "sitemap.html"
           </li>
           <li class="m-t-sm">
             <a href="/components/page-navigation.html">Page navigation</a>
-          </li>
-          <li class="m-t-sm">
-            <a href="/components/parallax.html">Parallax</a>
           </li>
           <li class="m-t-sm">
             <a href="/components/progress-bar.html">Progress bar</a>
