fixing broken links

--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -138,7 +138,7 @@ permalink: "accessibility.html"
     </a>
   </li>
   <li>
-    <a href="http://www.dor.ca.gov/">
+    <a href="https://www.dor.ca.gov/">
       California Department of Rehabilitation (DoR)
     </a>
   </li>
