--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -5,8 +5,6 @@ layout: page.njk
 permalink: "visual-design/ui-kit.html"
 ---
 
-
-
 <div class="row">
   <div class="col-lg-4 col-xl-3">
     <nav
@@ -15,7 +13,9 @@ permalink: "visual-design/ui-kit.html"
       <span class="sr-only" id="side-navigation-label">Side navigation</span>
       <ul class="list-navigation">
         <li>
-          <a href="javascript:;" aria-hidden="true" class="d-none">Visual design</a>
+          <a href="javascript:;" aria-hidden="true" class="d-none"
+            >Visual design</a
+          >
         </li>
         <li><a href="/visual-design/color.html">Colors</a></li>
         <li><a href="/visual-design/icons.html">Icons</a></li>
@@ -27,45 +27,70 @@ permalink: "visual-design/ui-kit.html"
   <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 class="m-t-0">UI kit</h1>
 
-
     <div class="card">
       <div class="card-body brd-solid-1 brd-gray-200 rounded-5">
-          <h2 class="m-t-0">Get the UI kit</h2>
-          <p>
-            We provide a UI kit in Figma so you can prototype your department website or projects. Our kit has a library of elements that are ready to go when you need them. You save time because you don’t have to build or scour the internet for items. This helps you:
-          </p>
+        <h2 class="m-t-0">Get the UI kit</h2>
+        <p>
+          We provide a UI kit in Figma so you can prototype your department
+          website or projects. Our kit has a library of elements that are ready
+          to go when you need them. You save time because you don’t have to
+          build or scour the internet for items. This helps you:
+        </p>
 
-          <ul class="m-b-md m-t">
-            <li>Quickly and easily use existing components, typography, and colors for your project</li>
-            <li>Review and receive approval for a design/concept</li>
-            <li>Communicate expectations with your developer</li>
-            <li>QA/validate after something is developed</li>
-          </ul>
-        <a class="btn btn-primary p-x-md m-b" href="https://www.figma.com/community/file/1296266765771316349">State Web Template Figma UI kit</a>
+        <ul class="m-b-md m-t">
+          <li>
+            Quickly and easily use existing components, typography, and colors
+            for your project
+          </li>
+          <li>Review and receive approval for a design/concept</li>
+          <li>Communicate expectations with your developer</li>
+          <li>QA/validate after something is developed</li>
+        </ul>
+        <a
+          class="btn btn-primary p-x-md m-b"
+          href="https://www.figma.com/community/file/1296266765771316349/ca-state-web-template-ui-kit"
+          >State Web Template Figma UI kit</a
+        >
       </div>
     </div>
 
-
-
     <h2>Getting started</h2>
     <p>
-      In a few minutes, you can start prototyping. Here are a couple of tasks you need to do first.
+      In a few minutes, you can start prototyping. Here are a couple of tasks
+      you need to do first.
     </p>
 
     <ul>
-      <li><span class="bold">Create an account:</span> To use Figma, you have to have an account. You can create a free account or your department can purchase a paid account. </li>
-      <li><span class="bold">Log into Figma:</span> You can either use Figma in your browser or you can download a desktop version.</li>
-      <li><span class="bold">Download UI kit: </span> Get the <a href="https://www.figma.com/community/file/1296266765771316349">UI kit from Figma</a>.  Review the different pages in the kit.</li>
+      <li>
+        <span class="bold">Create an account:</span> To use Figma, you have to
+        have an account. You can create a free account or your department can
+        purchase a paid account.
+      </li>
+      <li>
+        <span class="bold">Log into Figma:</span> You can either use Figma in
+        your browser or you can download a desktop version.
+      </li>
+      <li>
+        <span class="bold">Download UI kit: </span> Get the
+        <a
+          href="https://www.figma.com/community/file/1296266765771316349/ca-state-web-template-ui-kit"
+          >UI kit from Figma</a
+        >. Review the different pages in the kit.
+      </li>
     </ul>
 
-    <p>Figma allows everyone to have a free account (limited options but you’re still able to use the UI kit and prototype). There are also team and enterprise accounts. Check with your department about using Figma.</p>
+    <p>
+      Figma allows everyone to have a free account (limited options but you’re
+      still able to use the UI kit and prototype). There are also team and
+      enterprise accounts. Check with your department about using Figma.
+    </p>
 
     <p>The UI kit provides more detail on how to use the kit.</p>
- 
 
     <h2>Starter site prototype</h2>
     <p>
-      In the kit, we also provide a starter site. It has all the basic items a department usually needs to create a website. Page templates include:
+      In the kit, we also provide a starter site. It has all the basic items a
+      department usually needs to create a website. Page templates include:
     </p>
 
     <ul>
@@ -76,8 +101,6 @@ permalink: "visual-design/ui-kit.html"
       <li>Careers</li>
       <li>Newsroom</li>
     </ul>
-<p>&hellip; and more!</p>
-
+    <p>&hellip; and more!</p>
   </div>
 </div>
-
