--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -123,7 +123,7 @@ permalink: "accessibility.html"
 <h2>Related Resources:</h2>
 <ul>
   <li>
-    <a href="https://webstandards.ca.gov/accessibility/">
+    <a href="https://webstandards.ca.gov/web-policies/accessibility/">
       California’s Accessibility Standards
     </a>
   </li>
