--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -49,9 +49,7 @@ permalink: "structure/utility-header.html"
         The text “Official website of the State of California” (on desktop) or
         “State of California” (on mobile)
       </li>
-      <li>
-        Optional utility header links
-      </li>
+      <li>Optional utility header links</li>
     </ul>
 
     <h2>Sample</h2>
@@ -141,8 +139,7 @@ permalink: "structure/utility-header.html"
 
     <p>
       If you want to include a translation widget in the utility header,
-      <a href="/contact-us.html">reach out through our Contact page</a>
-      .
+      <a href="/contact-us.html">reach out through our Contact page</a>.
     </p>
 
     <h3>How not to use it</h3>
@@ -155,8 +152,7 @@ permalink: "structure/utility-header.html"
     <p>
       Do not combine the utility header with department name or logo,
       navigation, or information. These are in the
-      <a href="/structure/site-header.html">site header</a>
-      .
+      <a href="/structure/site-header.html">site header</a>.
     </p>
 
     <h2>Accessibility</h2>
